--- a/MainPage.html
+++ b/MainPage.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
+<head>
+  <title>A Brief History Of Adam Eiffert</title>
+</head>
 <body>
-<h1>Hi</h1>
+  <h1>Introduction</h1>
+  <p>I am Adam Eiffert, a year 13 student from Kent and am currently studying <a href="Mathematics">Mathematics</a>, 
+    <a href="Further Mathematics">Further Mathematics</a>, <a href="Computer Science">Computer Science</a> and 
+    <a href="Chemistry">Chemistry</a>. I am also participating in an <a href="EPQ">EPQ</a>. For more inofrmation on each one of there subjects, please click the name and more inofrmation will be 
+    provided.</p> 
 </body>
 </html>
