--- a/FurtherMathematics.html
+++ b/FurtherMathematics.html
@@ -3,4 +3,7 @@
 </head>
 <body>
 <h1>Further Mathematics</h1>
-<p>I have 
+<p>I have already done an AS in mathematics which included the S2, FP1 and D1 modules and achieved more than 80 UMS in each of these. I am now 
+  completing the FP2, FP3 and M2 modules for A2, which I am on track to achieve an A* in. I am also self teaching myself the D2 module as I 
+  believe that this will be useful when it comes to problem solving.</p>
+</body>
