--- a/MainPage.html
+++ b/MainPage.html
@@ -4,6 +4,7 @@
 </head>
 <body>
   <h1>Introduction</h1>
+  <img src="images.png" width="100" height="140">
   <p>I am Adam Eiffert, a year 13 student from Kent and am currently studying <a href="Mathematics.html">Mathematics</a>, 
     <a href="FurtherMathematics.html">Further Mathematics</a>, <a href="ComputerScience.html">Computer Science</a> and 
     <a href="Chemistry.html">Chemistry</a>. I am also participating in an <a href="EPQ.html">EPQ</a>. For more inofrmation on each one of there subjects, please click the name and more inofrmation will be 
