--- a/MainPage.html
+++ b/MainPage.html
@@ -2,7 +2,11 @@
 <head>
   <title>A Brief History Of Adam Eiffert</title>
 </head>
-<body>
-   <img src="images.png" alt="Funny computer graph" style="float:right;width:400px;height:200px;">
+<body><h1>Introduction</h1>
+  <img src="images.png" alt="Funny computer graph" style="float:right;width:400px;height:200px;">
+  <p>I am Adam Eiffert, a year 13 student from Kent and am currently studying <a href="Mathematics.html">Mathematics</a>, 
+    <a href="FurtherMathematics.html">Further Mathematics</a>, <a href="ComputerScience.html">Computer Science</a> and 
+    <a href="Chemistry.html">Chemistry</a>. I am also participating in an <a href="EPQ.html">EPQ</a>. For more inofrmation on each one of there subjects, please click the name and more inofrmation will be 
+    provided.</p>
 </body>
 </html>
