--- a/Mathematics.html
+++ b/Mathematics.html
@@ -2,6 +2,21 @@
 <title>Mathematics</title>
 </head>
 <body>
+<div class="navbar">
+  <a href="MainPage.html">Introduction</a>
+  <a href="Chemistry.html">Chemistry</a>
+  <a href="FurtherMathematics.html.html">Further Mathematics</a>
+  <a href="Mathematics.html">Mathematics</a>
+  <div class="dropdown">
+    <button class="dropbtn">Projects
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="Computing.html">Computing</a>
+      <a href="EPQ.html">EPQ</a>
+    </div>
+  </div>
+</div> 
 <h1>Mathematics</h1>
 <p>I have already done an AS in mathematics which included the C1, C2 and S1 modules and achieved more than 80 UMS in each of these. I am now 
 completing the C3, C4 and M1 modules for A2, which I am on track to achieve an A* in. I also partcipated in the FSMQ (Free Standing Maths 
