--- a/MainPage.html
+++ b/MainPage.html
@@ -1,7 +1,23 @@
 <head>
   <title>A Brief History Of Adam Eiffert</title>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<div class="navbar">
+  <a href="MainPage.html">Introduction</a>
+  <a href="Chemistry.html">Chemistry</a>
+  <a href="FurtherMathematics.html.html">Further Mathematics</a>
+  <a href="Mathematics.html">Mathematics</a>
+  <div class="dropdown">
+    <button class="dropbtn">Projects
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="Computing.html">Computing</a>
+      <a href="EPQ.html">EPQ</a>
+    </div>
+  </div>
+</div> 
   <img src="images.png" alt="Funny computer graph" style="float:right;width:600px;height:300px;">
   <h1>Introduction</h1>
   <p>I am Adam Eiffert, a year 13 student from Kent and am currently studying <a href="Mathematics.html">Mathematics</a>, 
