--- a/FurtherMathematics.html
+++ b/FurtherMathematics.html
@@ -1,7 +1,23 @@
 <head>
 <title>Further Mathematics</title>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<div class="navbar">
+  <a href="MainPage.html">Introduction</a>
+  <a href="Chemistry.html">Chemistry</a>
+  <a href="FurtherMathematics.html.html">Further Mathematics</a>
+  <a href="Mathematics.html">Mathematics</a>
+  <div class="dropdown">
+    <button class="dropbtn">Projects
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="Computing.html">Computing</a>
+      <a href="EPQ.html">EPQ</a>
+    </div>
+  </div>
+</div> 
 <h1>Further Mathematics</h1>
 <p>I have already done an AS in mathematics which included the S2, FP1 and D1 modules and achieved more than 80 UMS in each of these. I am now 
   completing the FP2, FP3 and M2 modules for A2, which I am on track to achieve an A* in. I am also self teaching myself the D2 module as I 
