--- a/ComputerScience.html
+++ b/ComputerScience.html
@@ -1,7 +1,23 @@
 <head>
 <title>Computer Science</title>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<div class="navbar">
+  <a href="MainPage.html">Introduction</a>
+  <a href="Chemistry.html">Chemistry</a>
+  <a href="FurtherMathematics.html.html">Further Mathematics</a>
+  <a href="Mathematics.html">Mathematics</a>
+  <div class="dropdown">
+    <button class="dropbtn">Projects
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="Computing.html">Computing</a>
+      <a href="EPQ.html">EPQ</a>
+    </div>
+  </div>
+</div> 
 <h1>Computer Science</h1>
 <p>I am currently particpating in the Computer Science A2 level qualification. As part of this, I have been researching the how to code AI. To do this, I have created a platform in which a user is able to put AI against each other in a game of Sevens until an 'optimal' solution is found. This has been interesting as it is soemthing that is not taught in detail during the syllabus.</p>
 </body>
