--- a/Mathematics.html
+++ b/Mathematics.html
@@ -6,7 +6,7 @@
 <div class="navbar">
   <a href="MainPage.html">Introduction</a>
   <a href="Chemistry.html">Chemistry</a>
-  <a href="FurtherMathematics.html.html">Further Mathematics</a>
+  <a href="FurtherMathematics.html">Further Mathematics</a>
   <a href="Mathematics.html">Mathematics</a>
   <div class="dropdown">
     <button class="dropbtn">Projects
