--- a/Chemistry.html
+++ b/Chemistry.html
@@ -13,11 +13,11 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="Computing.html">Computing</a>
+      <a href="ComputerScience.html">Computer Science</a>
       <a href="EPQ.html">EPQ</a>
     </div>
   </div>
-</div> 
+</div>
 <h1>Chemistry</h1>
 <p>I am currently doing a Chemistry A Level. It is not a particularly an exciting A Level but it is something different from the rest of my subjects.</p>
 </body>
