--- a/ComputerScience.html
+++ b/ComputerScience.html
@@ -13,11 +13,11 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="Computing.html">Computing</a>
+      <a href="ComputerScience.html">Computer Science</a>
       <a href="EPQ.html">EPQ</a>
     </div>
   </div>
-</div> 
+</div>
 <h1>Computer Science</h1>
 <p>I am currently particpating in the Computer Science A2 level qualification. As part of this, I have been researching the how to code AI. To do this, I have created a platform in which a user is able to put AI against each other in a game of Sevens until an 'optimal' solution is found. This has been interesting as it is soemthing that is not taught in detail during the syllabus.</p>
 </body>
