--- a/EPQ.html
+++ b/EPQ.html
@@ -13,7 +13,7 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="Computing.html">Computing</a>
+      <a href="ComputerScience.html">Computer Science</a>
       <a href="EPQ.html">EPQ</a>
     </div>
   </div>
