--- a/MainPage.html
+++ b/MainPage.html
@@ -24,6 +24,6 @@
     <b href="FurtherMathematics.html">Further Mathematics</b>, <b href="ComputerScience.html">Computer Science</b> and 
     <b href="Chemistry.html">Chemistry</b>. I am also participating in an <b href="EPQ.html">EPQ</b>. For more inofrmation on each one of there subjects, please click the name and more inofrmation will be 
     provided.</p>
-  <button type="button" onclick="document.getElementById("text").style.fintsize--">Decrease text size</button>
-  <button type="button" onclick="document.getElementById("text").style.fintsize++">Increase text size</button>
+  <button type="button" onclick="document.getElementById("text").style.fintsize='15px'">Decrease text size</button>
+  <button type="button" onclick="document.getElementById("text").style.fintsize='25px'">Increase text size</button>
 </body>
