--- a/MainPage.html
+++ b/MainPage.html
@@ -20,7 +20,7 @@
 </div> 
   <img src="images.png" alt="Funny computer graph" style="float:right;width:600px;height:300px;">
   <h1>Introduction</h1>
-  <p id="text">I am Adam Eiffert, a year 13 student from Kent and am currently studying <a href="Mathematics.html">Mathematics</a>, 
+  <p id="text" fontsize='20px'>I am Adam Eiffert, a year 13 student from Kent and am currently studying <a href="Mathematics.html">Mathematics</a>, 
     <b href="FurtherMathematics.html">Further Mathematics</b>, <b href="ComputerScience.html">Computer Science</b> and 
     <b href="Chemistry.html">Chemistry</b>. I am also participating in an <b href="EPQ.html">EPQ</b>. For more inofrmation on each one of there subjects, please click the name and more inofrmation will be 
     provided.</p>
