--- a/MainPage.html
+++ b/MainPage.html
@@ -21,8 +21,8 @@
   <img src="images.png" alt="Funny computer graph" style="float:right;width:600px;height:300px;">
   <h1>Introduction</h1>
   <p id="text" fontsize='20px'>I am Adam Eiffert, a year 13 student from Kent and am currently studying <a href="Mathematics.html">Mathematics</a>, 
-    <b href="FurtherMathematics.html">Further Mathematics</b>, <b href="ComputerScience.html">Computer Science</b> and 
-    <b href="Chemistry.html">Chemistry</b>. I am also participating in an <b href="EPQ.html">EPQ</b>. For more inofrmation on each one of there subjects, please click the name and more inofrmation will be 
+    <a href="FurtherMathematics.html">Further Mathematics</a>, <a href="ComputerScience.html">Computer Science</a> and 
+    <a href="Chemistry.html">Chemistry</a>. I am also participating in an <a href="EPQ.html">EPQ</a>. For more inofrmation on each one of there subjects, please click the name and more inofrmation will be 
     provided.</p>
   <button type="button" onclick="document.getElementById("text").style.fintsize='15px'">Decrease text size</button>
   <button type="button" onclick="document.getElementById("text").style.fintsize='25px'">Increase text size</button>
