--- a/MainPage.html
+++ b/MainPage.html
@@ -20,10 +20,10 @@
 </div> 
   <img src="images.png" alt="Funny computer graph" style="float:right;width:600px;height:300px;">
   <h1>Introduction</h1>
-  <p id="text" fontsize='20px'>I am Adam Eiffert, a year 13 student from Kent and am currently studying <a href="Mathematics.html">Mathematics</a>, 
+  <p id="text" fontSize='20px'>I am Adam Eiffert, a year 13 student from Kent and am currently studying <a href="Mathematics.html">Mathematics</a>, 
     <a href="FurtherMathematics.html">Further Mathematics</a>, <a href="ComputerScience.html">Computer Science</a> and 
     <a href="Chemistry.html">Chemistry</a>. I am also participating in an <a href="EPQ.html">EPQ</a>. For more inofrmation on each one of there subjects, please click the name and more inofrmation will be 
     provided.</p>
-  <button type="button" onclick="document.getElementById("text").style.fintsize='15px'">Decrease text size</button>
-  <button type="button" onclick="document.getElementById("text").style.fintsize='25px'">Increase text size</button>
+  <button type="button" onclick="document.getElementById("text").style.fontSize='15px'">Decrease text size</button>
+  <button type="button" onclick="document.getElementById("text").style.fontSize='25px'">Increase text size</button>
 </body>
