--- a/MainPage.html
+++ b/MainPage.html
@@ -1,8 +1,25 @@
 <head>
   <title>A Brief History Of Adam Eiffert</title>
+  <script>
+function startTime() {
+    var today = new Date();
+    var h = today.getHours();
+    var m = today.getMinutes();
+    var s = today.getSeconds();
+    m = checkTime(m);
+    s = checkTime(s);
+    document.getElementById('txt').innerHTML =
+    h + ":" + m + ":" + s;
+    var t = setTimeout(startTime, 500);
+}
+function checkTime(i) {
+    if (i < 10) {i = "0" + i};  // add zero in front of numbers < 10
+    return i;
+}
+</script>
 <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body onload="startTime()">
 <div class="navbar">
   <a href="MainPage.html">Introduction</a>
   <a href="Chemistry.html">Chemistry</a>
@@ -20,10 +37,9 @@
 </div> 
   <img src="images.png" alt="Funny computer graph" style="float:right;width:600px;height:300px;">
   <h1>Introduction</h1>
-  <p id="text">I am Adam Eiffert, a year 13 student from Kent and am currently studying <a href="Mathematics.html">Mathematics</a>, 
+  <p>I am Adam Eiffert, a year 13 student from Kent and am currently studying <a href="Mathematics.html">Mathematics</a>, 
     <a href="FurtherMathematics.html">Further Mathematics</a>, <a href="ComputerScience.html">Computer Science</a> and 
     <a href="Chemistry.html">Chemistry</a>. I am also participating in an <a href="EPQ.html">EPQ</a>. For more inofrmation on each one of there subjects, please click the name and more inofrmation will be 
     provided.</p>
-  <button type="button" onclick="document.getElementById("text").style.fontSize='15px'">Decrease text size</button>
-  <button type="button" onclick="document.getElementById("text").style.fontSize='25px'">Increase text size</button>
+  <div id="txt"></div>
 </body>
