--- a/MainPage.html
+++ b/MainPage.html
@@ -1,22 +1,6 @@
 <head>
   <title>A Brief History Of Adam Eiffert</title>
-  <script>
-function startTime() {
-    var today = new Date();
-    var h = today.getHours();
-    var m = today.getMinutes();
-    var s = today.getSeconds();
-    m = checkTime(m);
-    s = checkTime(s);
-    document.getElementById('txt').innerHTML =
-    h + ":" + m + ":" + s;
-    var t = setTimeout(startTime, 500);
-}
-function checkTime(i) {
-    if (i < 10) {i = "0" + i};  // add zero in front of numbers < 10
-    return i;
-}
-</script>
+  <script src="startTime.js"></script>
 <link rel="stylesheet" href="styles.css">
 </head>
 <body onload="startTime()">
