--- a/Chemistry.html
+++ b/Chemistry.html
@@ -1,8 +1,9 @@
 <head>
 <title>Chemistry</title>
+  <script src="startTime.js"></script>
 <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body onload="startTime()">
 <div class="navbar">
   <a href="MainPage.html">Introduction</a>
   <a href="Chemistry.html">Chemistry</a>
@@ -20,4 +21,5 @@
 </div>
 <h1>Chemistry</h1>
 <p>I am currently doing a Chemistry A Level. It is not a particularly an exciting A Level but it is something different from the rest of my subjects.</p>
+ <div id="txt"></div>
 </body>
