--- a/ComputerScience.html
+++ b/ComputerScience.html
@@ -1,8 +1,9 @@
 <head>
 <title>Computer Science</title>
 <link rel="stylesheet" href="styles.css">
+<script src="startTime.js"></script>
 </head>
-<body>
+<body onload="startTime()">
 <div class="navbar">
   <a href="MainPage.html">Introduction</a>
   <a href="Chemistry.html">Chemistry</a>
@@ -20,4 +21,5 @@
 </div>
 <h1>Computer Science</h1>
 <p>I am currently particpating in the Computer Science A2 level qualification. As part of this, I have been researching the how to code AI. To do this, I have created a platform in which a user is able to put AI against each other in a game of Sevens until an 'optimal' solution is found. This has been interesting as it is soemthing that is not taught in detail during the syllabus.</p>
+<div id="txt"></div>
 </body>
