--- a/EPQ.html
+++ b/EPQ.html
@@ -1,8 +1,9 @@
 <head>
 <title>EPQ</title>
 <link rel="stylesheet" href="styles.css">
+  <script src="startTime.js"></script>
 </head>
-<body>
+<body onload="startTime()">
 <div class="navbar">
   <a href="MainPage.html">Introduction</a>
   <a href="Chemistry.html">Chemistry</a>
@@ -20,4 +21,5 @@
 </div> 
 <h1>EPQ</h1>
 <p>I am currently participating in an Extended Project Qualification. This is a chance for students to show off their research skills as well as improving them. I am researching the pros and cons of the use of encryption in order to come to a conlucion of a solution that will allow the government to stop terrorists as well as maintain privacy of internet users. This is very interesting as it allows me to go into the field of cryptography with a strong and well balanced opion of the field.</p>
+<div id="txt"></div>
 </body>
