--- a/FurtherMathematics.html
+++ b/FurtherMathematics.html
@@ -1,8 +1,9 @@
 <head>
 <title>Further Mathematics</title>
+  <script src="startTime.js"></script>
 <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body onload="startTime()">
 <div class="navbar">
   <a href="MainPage.html">Introduction</a>
   <a href="Chemistry.html">Chemistry</a>
@@ -22,4 +23,5 @@
 <p>I have already done an AS in mathematics which included the S2, FP1 and D1 modules and achieved more than 80 UMS in each of these. I am now 
   completing the FP2, FP3 and M2 modules for A2, which I am on track to achieve an A* in. I am also self teaching myself the D2 module as I 
   believe that this will be useful when it comes to problem solving.</p>
+  <div id="txt"></div>
 </body>
