--- a/Mathematics.html
+++ b/Mathematics.html
@@ -1,8 +1,9 @@
 <head>
 <title>Mathematics</title>
+  <script src="startTime.js"></script>
 <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body onload="startTime()">
 <div class="navbar">
   <a href="MainPage.html">Introduction</a>
   <a href="Chemistry.html">Chemistry</a>
@@ -22,4 +23,5 @@
 <p>I have already done an AS in mathematics which included the C1, C2 and S1 modules and achieved more than 80 UMS in each of these. I am now 
 completing the C3, C4 and M1 modules for A2, which I am on track to achieve an A* in. I also partcipated in the FSMQ (Free Standing Maths 
 Qualification) at the same time I was participating in my Mathematics GCSE. I achived an A in this.</p>
+<div id="txt"></div>
 </body>
